# wednesday

./: .coveragerc  LICENSE.txt  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
src/wednesday/: cli.py
tests/: conftest.py  test_cli.py
wednesday/: package.json
